---
source: spade-tests/src/linear_check.rs
---
struct A {
    x: inv bool,
    y: bool
}
entity x(resource: A) -> bool {
    true
}


error: resource.x is unused
  ┌─ testinput:5:10
  │
5 │ entity x(resource: A) -> bool {
  │          ^^^^^^^^ resource.x is unused
  │
  = note: resource.x is an inverted wire (`inv`) which must be set
